# market_test

./: db.sqlite3  manage.py  pyproject.toml
market_test/: asgi.py  settings.py  urls.py  wsgi.py
notifications/: models.py  serializers.py  views.py
notifications/migrations/: 0001_initial.py
